--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "author": "Khánh Nòi",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.17.1"
+        "@hapi/joi": "^17.1.1",
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.19.0",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "joi": "^17.3.0",
+        "mongoose": "^5.11.13"
     },
     "devDependencies": {
         "nodemon": "^2.0.7"
