--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DB_CONNECT = "mongodb+srv://auth:RAMxQkL2QtLwoyKv@cluster0.914jm.mongodb.net/authDB?retryWrites=true&w=majority"
+TOKEN_SECRET =  'knknknkn'
